# ChangeLog for app-text/evince
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.272 2014/07/22 10:42:26 ago Exp $

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> evince-3.12.1.ebuild:
  Stable for amd64, wrt bug #512912

  16 Jun 2014; Anthony G. Basile <blueness@gentoo.org> evince-3.10.3.ebuild,
  evince-3.12.1.ebuild:
  Keyword ~mips

*evince-3.12.1 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +evince-3.12.1.ebuild,
  metadata.xml:
  Version bump for Gnome 3.12.

  23 Apr 2014; Pacho Ramos <pacho@gentoo.org> -evince-3.8.3.ebuild:
  Drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> evince-3.10.3.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> evince-3.10.3.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> evince-3.10.3.ebuild:
  Fix wrong commit, bug 502160

*evince-3.10.3 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +evince-3.10.3.ebuild,
  metadata.xml:
  Version bump for Gnome 3.10

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> -evince-3.6.1.ebuild,
  -evince-3.8.2.ebuild, -files/evince-3.6.0-evince.desktop.patch,
  evince-3.8.3.ebuild:
  Add missing RDEPEND on librsvg (#494130 by Johan Hovold), drop old.

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> evince-3.8.3.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> evince-3.8.3.ebuild:
  amd64 stable, bug #478252

  01 Aug 2013; Alexandre Rostovtsev <tetromino@gentoo.org> evince-3.8.2.ebuild,
  evince-3.8.3.ebuild:
  Add missing dependency on gnome-icon-theme-symbolic (bug #479290, thanks to
  Timo Kamph).

*evince-3.8.3 (11 Jul 2013)

  11 Jul 2013; Pacho Ramos <pacho@gentoo.org> +evince-3.8.3.ebuild,
  -evince-3.8.0.ebuild:
  Version bump, drop old

*evince-3.8.2 (15 May 2013)

  15 May 2013; Pacho Ramos <pacho@gentoo.org> +evince-3.8.2.ebuild:
  Version bump
