@@ -6,23 +6,23 @@ DIST iso-codes-3.54.tar.xz 3766812 SHA256 1fe06e68dff821a4fcc3c9da9dd6674ffd9e84
 DIST iso-codes-3.55.tar.xz 3769864 SHA256 6c48f417160fa5f9e6874c19a07b220654974594a838460fdba06965c77e94e6 SHA512 167f4b33d6d7c3824c59060fbf3b8e91f1aa7adce0ee0d6d0f5bb1e8f97d82aa0a0ff6065744fbec304de90b413bc53fb8237b551120149fade25335ce5137d8 WHIRLPOOL cbba121c7cfa8f0588641ba8cfd23fcfc22713d515201f7757e3aabab466c7b0c41b3e3ba0c7776207eb6c1137d48228110f4be42cb12e7b4532a7e9ca737066
 EBUILD iso-codes-3.51.ebuild 1400 SHA256 b0156331873ca82b4c3d6dbb50635142a9e976613796dfa6826aad16dab6e882 SHA512 5f85f45c43a89296dfe85840188be3b71212b2d7349407d54fd74afaa74c54964762a41af301e67febc40ffce461d7948a74fd75828220a9cee122828aa2ff50 WHIRLPOOL 559fe813e0597fde5c2fc77ab7093301807e6354e30c1a9ca9347734320493528cee79639cb2fbadd72e4f7ced14efe80140d429382693a17637854e89aec789
 EBUILD iso-codes-3.54.ebuild 2401 SHA256 1107109a0a2002e2bf30e3652e8446804eeddafe5218e927d18a6fe04427cdbe SHA512 62da362da1d1df6a0d6502627e3a1be43fb193e8daab1910209c559f83aa98ae1db458780b949077efb8416bdfe7952dc03513244f2f9fe8242bce629f38803a WHIRLPOOL 388bf2dea37a6a96889ac3aedd704cf67067dac2b6d1b9c8b994e9ccb9d1e1067b60304d6ece884397d9e90115e1c72dcf21609ff4e77939570dbdf94f30ceaf
-EBUILD iso-codes-3.55.ebuild 2394 SHA256 eb600a934b33bd2feb767b626426b629152269ad0d0af69e7a0d6d209d10cbd8 SHA512 9af18b83e70f5fd3b005dd3ed480eafa1de1c5747617b3cc0bc7fe78381fc82289a64fbe3e30805e78cc0635195d331dabdd6fbb6c3d1d43381692dcc9b2550c WHIRLPOOL a3a7b927d3b0eb732723c0c2f51981e57d035eeb44cdbbadaa4453fb22d417147b6043608cefa398f1b5e349f4982f3c31797225cc7851f16373035e9b3a4e9d
-MISC ChangeLog 20482 SHA256 d32912cbbad2737502eb3b2b913fa407bdde2b4d4cd45dba9b264ca82cca8c68 SHA512 797ccb562eef3e3b83dec70a3444a6dfcae49590ca12393b7d34aee333d9b5b3c488cac2997d5e5cf3ce436e10427caa77ea9a444562582b1b568f3c5204bdeb WHIRLPOOL 86247fab072d9ee9ec80a9d32a9f1e68c4d4380dac13b5d08d1e101f11a771672cc51af0b04c9c7a99475e1065a120eba0d128bc0cd0f30a40bd8cfaf91f98ce
+EBUILD iso-codes-3.55.ebuild 2393 SHA256 bc1e1bd3584d5fdeeadbb324619e29b187cac24abe41ade22c4c10b5253c39e5 SHA512 b411f9901af28c5e2b23eb7648bfbcb5b0d243cdabcdd9047d9e97a36662540c85dcfccf4f0482b5fca598adc4417e107a1b05ee6d8fae638db866702b0e5f43 WHIRLPOOL af4fbba82fb6cee9431b459546ee03d1fcf370fc5a241b9686b0c4440b103e933d66ab92a8f77ead6e287649c2be7aab2b64e07ffcf04f8bedb87007b20b1226
+MISC ChangeLog 20589 SHA256 a34720a7cf076bace16e835d3a9718ffdd4ab6a6428578b9bfa63583a731faaa SHA512 776de8cba2a345f3fa1d137b2969c92f787be1db92816f746106d43f3107a70f63c92bef14abd625f421e2eb5c8f135390093db1cdf3b081ce1b016a9d02f2c3 WHIRLPOOL ca1da990269486cb8bee403df9645299e05df338495eddff8740b28251ad49d1f7ba193ad088399123f3ea99d7ecb5e3eb11a240815758034412c8b8314f856c
 MISC metadata.xml 387 SHA256 d5252ca9dce95b72fa3153d212126bfa4594a1cf6868bff0dc205e46891a05e8 SHA512 fe1255bac7852aa3a93b5e0da7025f32d4b633f9d29c441501e5f7c30dafdd963ef00d62e68567f6a6b6fc15eb370ab4326bb6a7cc66681cca79e1767c791a94 WHIRLPOOL c4d465b7b0d6a7f0582ca0cb74c44a57d369c18a45bb81854c879398d0b5c0745ec300f2770e79e279833c8622920036a3b6bd8ae07d92ef3d8c8b02d3f1e3c9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTzkAVAAoJELp701BxlEWfYmgQAJrEgWUvuhCI0t66NC3du6Ix
-ihs7NY085fJhdIq+CK9/AxK09r9Gf+lQlInfxH0i9p75b/vzJfqy4dQWYnT6njIA
-JjByqnVpd7UlflFv2SULgbnITjn4eMthFjPNbNWMWC7UGHa/OUA0QnMQOFGpaGuP
-W04Hj0jjEo+CscMgC3YJ0gHoMzE6PVdPO1ovKOiIbxMa8iMq4lxHcUR6NsDtp2CL
-o9VZLlZ6bXTV4X2Dh2q2trHdziVZW6OoDjyAOdIqiWna8Z5n51RiBPnXm1g99/uJ
-tV2N7AY067K05t0GsZT57EQIcH0mWVpsjEshrkS5wbOfBD/ZQu9nX4TYDWFz3N6s
-bxAqkb7pq220r1M16ATU467yCO1jwuSaIgdih8DjV6lolHohJ0bxDXRD2cDNUT/f
-56iNdWoI7WupGV67aVGlCst+GlZmSdKFD95gIUxZ7huMi2kBDeLULWt+XejGfsmz
-VapryyRG1OVFoUuAp17ZWefi772JsT5K8wCQsEOnrEUSL7IlVjdOvlHSAIKzK/P9
-WGDL6laEjcyoKAyQPjcJtPtsJhvXz/ZI5FsHUJC2ZiAFyV+7/znjIEVjYUO4sVkE
-JIQzacQkn+aLNnUDXGYltqCr8H0BL8OUSgU6HUvqiWcV85cmAZ7o1OjWBKVD2sTz
-pkogqO5QhbryKwov8V/f
-=lxd4
+iQIcBAEBCAAGBQJTz9EoAAoJELp701BxlEWfWkgQAKFurEQ1Z/X35ik+R7IEuxBw
+SEa+D+NTjRbsLfAr+yUdLEqEP19lpPyi34dUwmEegozOsPsGRnIy9MVw6GdLn9IP
+ETTjnWFPjyy2rGKMwbGW0o1WWawk9kSwdgfmDUZhXmaxQRgUCkmCMs1xKswby5I/
+DKqSkPzNFsCLzJbyZazhum8de7GM97pzgW+XJPrATWMGB50Lax9FGUXZU53/+RNI
+Gqpljvl7GJxPce1RJh33fo9InDareMG1zRGbWAOLQ0V+ALLP/iW0ok9YKTtelT6d
+FZeWfoePcqqzFjs+hTTtN2IRc/KLbd1w6NUVMVhmnDT5bMYL9IqRfdVaQzYP2ktX
+W12HBqTftN15p9kZsb0f6F6b8Qm9TbMByvIHdZfj3dOyXSqWQ+VZP/kxccG417aa
+ugZwA9Dtquot7sgxpuTuNMTJM+0HXNczUsR4pgxgY+p36LzyOTNKjccc8pINo12k
+uG2Ki+AX1Sx78Jg6+1L8oKYo+n7ple1dSJZnSSPchB9BJ05RNDaV2d4TreGht7cY
+bfB3EjnlSIz4+KdBtznzACOVFj4+qj/FE2XT4esVgc3ZfFPNeHSbahgtDbYCDCRt
+ddSa6DMC9Z94HHR+8nANl8cLekPRBAbbFBEmTYQRUBvAcOApt/opJ7Hd60xrOgsL
+rY9+xts9LWvlKf9UhHvq
+=VlHc
 -----END PGP SIGNATURE-----
