@@ -1,6 +1,9 @@
 # ChangeLog for app-text/iso-codes
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.165 2014/07/22 10:42:28 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.166 2014/07/23 15:13:43 ago Exp $
+
+  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> iso-codes-3.55.ebuild:
+  Stable for x86, wrt bug #512012
 
   22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> iso-codes-3.55.ebuild:
   Stable for amd64, wrt bug #512912
