@@ -1,6 +1,9 @@
 # ChangeLog for app-text/evince
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.272 2014/07/22 10:42:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.273 2014/07/23 15:13:41 ago Exp $
+
+  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> evince-3.12.1.ebuild:
+  Stable for x86, wrt bug #512012
 
   22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> evince-3.12.1.ebuild:
   Stable for amd64, wrt bug #512912
